# CameraHMR

./: .gitignore  demo.py  mesh_estimator.py  pyproject.toml
core/: camerahmr_model.py
core/backbones/: vit.py
core/utils/: geometry.py  renderer_pyrd.py
