[project]
name = "camerahmr"
version = "0.1.0"
description = "CameraHMR: Aligning People with Perspective (3DV 2025)"
readme = "ReadMe.md"
requires-python = "~=3.12.0"
dependencies = [
    "albumentations>=2.0.8",
    "chumpy",
    "detectron2",
    "einops>=0.8.1",
    "flatten-dict>=0.4.2",
    "hydra-colorlog>=1.2.0",
    "joblib>=1.5.1",
    "jpeg4py>=0.1.4",
    "loguru>=0.7.3",
    "numpy>=2.3.1",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.3.0",
    "pyrender>=0.1.45",
    "pyrootutils>=1.0.4",
    "pytorch-lightning>=2.5.2",
    "rich>=14.0.0",
    "scikit-image>=0.25.2",
    "setuptools<81",
    "smplx>=0.1.28",
    "timm>=1.0.16",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "yacs>=0.1.8",
]

[tool.uv.sources]
chumpy = { git = "https://github.com/motion-synthesis-for-biomed-research/chumpy", rev = "38ec4ee" }
detectron2 = { git = "https://github.com/facebookresearch/detectron2.git" }
